# ScreenPilot

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
datasets/demo/session_1775199611/: dataset.yaml
datasets/demo/session_1775199611/labels/train/: frame_000006.txt
docs/: annotation-playbook.md
gazefy/: cli.py  config.py
gazefy/actions/: action_types.py  coordinate_transform.py  executor.py
gazefy/capture/: change_detector.py  screen_capture.py  window_finder.py
gazefy/collector_ui/: overlay.py  recorder_widget.py
gazefy/core/: annotate_pipeline.py  app_router.py  application_pack.py  element_registry.py  hybrid_annotator.py  learner.py  model_registry.py  monitor.py  orchestrator.py  task_runner.py  video_annotator.py  video_recorder.py
gazefy/cursor/: cursor_monitor.py
gazefy/detection/: detector.py  element_verifier.py  grounding.py  grounding_label.py  ocr.py  screen_classifier.py
gazefy/knowledge/: manual_parser.py  ontology_generator.py  ontology_resolver.py  task_store.py  workflow_extractor.py
gazefy/llm/: client.py  formatters.py  interface.py  parsers.py
gazefy/tracker/: element_tracker.py  ui_map.py
gazefy/training/: annotation_converter.py  collector.py  dataset_prep.py  train_pack.py  trainer.py
packs/demo/: pack.yaml
screenpilot/: cli.py  config.py
screenpilot/capture/: change_detector.py  screen_capture.py  window_finder.py
screenpilot/core/: app_router.py  model_registry.py
screenpilot/training/: collector.py  dataset_prep.py  train_pack.py  trainer.py
screenpilot/utils/: geometry.py  timing.py
scripts/: benchmark.py  ruff-hook.sh
tests/: test_annotation_converter.py  test_application_pack.py  test_change_detector.py  test_collector.py  test_config.py  test_dataset_prep.py  test_geometry.py  test_task_runner.py  test_timing.py  test_trainer.py
